# plx_downscaler

./: .gitmodules  CMakeLists.txt  README.MD  run-gauss.bat  run-mip-floor.bat  run-photoshop-like.bat  run_lanczos.bat  run_mipmaps.bat  shared.cmake
ext/: CMakeLists.txt
ext/stb/: CMakeLists.txt
host/: CMakeLists.txt  args-parser.cpp  args-parser.hpp  main.cpp  pch.hpp
lib/: CMakeLists.txt
lib/include/downscaler/: AlphaPremultiply.hpp  Pixmap.hpp  PixmapConverter.hpp  ScalingAlgorithm.hpp  Transform.hpp  glm.hpp
lib/src/: BoxBlurMipMap.cpp  Gaussian.cpp  GaussianDownsample.cpp  GaussianSubsample.hpp  Lanczos.cpp  MipMapChain.cpp  MipMapChain.hpp  NearestSampler.hpp  Sampler.hpp  ScalingAlgorithm.cpp  Transform.cpp  pch.hpp
